--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,7 +92,7 @@
             <ul class="menu">
               {% include nav.html %}
             </ul>
-            <p><a class="logo" href="{{ site.baseurl }}"><img src="{{site.baseurl}}/img/logo.png" alt="Damgar Group Logo"></a></p>
+            <p><a class="logo" href="/"><img src="{{site.baseurl}}/img/logo.png" alt="Damgar Group Logo"></a></p>
           </div>
         </div>
 
