--- a/scss/_modules/_pages.scss
+++ b/scss/_modules/_pages.scss
@@ -215,9 +215,9 @@
 	  margin-bottom: 80px;
 
 	  .photo {
-	    background-color: $primary-color;
+	    // background-color: $primary-color;
 	    border-radius: 100px;
-	    width: 60px;
+	    width: 15px;
 	    height: 60px;
 	    float: left;
 	    margin-right: 10px;
